<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <ImageButton
        android:id="@+id/close_activity_singup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:padding="5dp"
        android:src="@drawable/ic_cancel"
        android:background="?attr/selectableItemBackgroundBorderless"
        />


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:layout_marginTop="25dp"
    android:gravity="center"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/singup_title"
            android:textColor="@color/backgroundColor"
            android:textSize="25sp"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/sing_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:hint="@string/singup_hint_name"
            android:drawableLeft="@drawable/ic_account"
            android:drawableTint="@color/backgroundColor"
            android:drawablePadding="8dp"
            android:inputType="text"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/justWhite"
            android:textColorHint="@color/backgroundColor"
            android:textSize="16sp"
            />

        <EditText
            android:id="@+id/sing_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:hint="@string/singup_hint_lastname"
            android:drawableLeft="@drawable/ic_account"
            android:drawableTint="@color/backgroundColor"
            android:drawablePadding="8dp"
            android:inputType="text"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/justWhite"
            android:textColorHint="@color/backgroundColor"
            android:textSize="16sp"
            />

        <EditText
            android:id="@+id/sing_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:drawableLeft="@drawable/ic_email"
            android:drawableTint="@color/backgroundColor"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/singup_hint_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textSize="16sp"
            android:textColor="@color/justWhite"
            android:textColorHint="@color/backgroundColor"
            />


        <EditText
            android:id="@+id/sing_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:drawableLeft="@drawable/ic_pass"
            android:drawableTint="@color/backgroundColor"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/singup_hint_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/justWhite"
            android:textColorHint="@color/backgroundColor"
            android:textSize="16sp"
            />

        <EditText
            android:id="@+id/sing_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:drawableLeft="@drawable/ic_pass"
            android:drawableTint="@color/backgroundColor"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/singup_hint_password_confirm"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/justWhite"
            android:textColorHint="@color/backgroundColor"
            android:textSize="16sp"
            />

        <CheckBox
            android:id="@+id/sing_checkbox_terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="@string/singup_terms_condition"
            android:textColor="@color/backgroundColor"
            android:textSize="14sp"
            />
        <Button
            android:id="@+id/sing_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/login_button"
            android:padding="3dp"
            android:text="@string/singup_btn"
            android:textColor="@color/textColorFilter"
            android:textSize="17sp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/sing_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/singup_login"
            android:textColor="@color/backgroundColor"
            android:textSize="15sp"
            />


    </LinearLayout>
</RelativeLayout>
</RelativeLayout>