<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    >
    <ImageButton
        android:id="@+id/close_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:padding="5dp"
        android:src="@drawable/ic_cancel"
        android:background="?attr/selectableItemBackgroundBorderless"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:gravity="center"
        >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/login_layout"
        android:src="@drawable/logo_white"
        android:scaleX="1.5"
        android:scaleY="1.5"
        />

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        >

        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/ic_email"
            android:drawableTint="@color/backgroundColor"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/login_hint_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/justWhite"
            android:textColorHint="@color/backgroundColor"
            android:textSize="16sp"
            />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:singleLine="true"
            android:drawableLeft="@drawable/ic_pass"
            android:drawableTint="@color/backgroundColor"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/login_hint_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/justWhite"
            android:textColorHint="@color/backgroundColor"
            android:textSize="16dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="8dp"
            >
            <CheckBox
                android:id="@+id/login_password_visible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login_checkbox_visible"
                android:textSize="14sp"
                android:textColor="@color/backgroundColor"
                />
            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:padding="5dp"
                android:text="@string/login_forgot_password"
                android:textColor="@color/backgroundColor"
                android:textSize="14sp"
                />
            
        </LinearLayout>
        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:layout_marginTop="3dp"
            android:background="@drawable/login_button"
            android:padding="3dp"
            android:text="@string/login_btn"
            android:textColor="@color/textColorFilter"
            android:textSize="17sp"
            android:textStyle="bold"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/create_accound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/login_create_account"
        android:textColor="@color/backgroundColor"
        android:textSize="15sp"
        />
    </RelativeLayout>
</RelativeLayout>