<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    >
    <ImageButton
        android:id="@+id/close_activity_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:padding="5dp"
        android:src="@drawable/ic_cancel"
        android:background="?attr/selectableItemBackgroundBorderless"
        />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/forgot_title"
            android:textColor="@color/backgroundColor"
            android:textStyle="bold"
            android:textSize="17sp"
            />
        <EditText
            android:id="@+id/forgot_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:singleLine="true"
            android:drawableLeft="@drawable/ic_email"
            android:drawableTint="@color/backgroundColor"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/forgot_hint_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/justWhite"
            android:textColorHint="@color/backgroundColor"
            android:textSize="16sp"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:id="@+id/forgot_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:padding="5dp"
                android:text="@string/forgot_back"
                android:textColor="@color/backgroundColor"
                android:textSize="15sp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/forgot_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:gravity="right"
                android:padding="5dp"
                android:text="@string/forgot_submit"
                android:textColor="@color/backgroundColor"
                android:textSize="15sp"
                android:textStyle="bold"
                />
        </RelativeLayout>


    </LinearLayout>
    </RelativeLayout>

</RelativeLayout>