<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:padding="8dp"
    >
    <android.support.v7.widget.CardView
        android:id="@+id/three_card_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_product_info"
        android:layout_marginBottom="8dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="14dp"
            >
            <EditText
                android:id="@+id/add_product_price"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="match_parent"
                android:hint="@string/step_three_price"
                android:lines="1"
                android:inputType="numberDecimal"
                android:layout_marginTop="8dp"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="$"
                android:gravity="center"
                android:textSize="25sp"
                />

        </LinearLayout>
    </android.support.v7.widget.CardView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add_product_user_info"
        android:layout_below="@id/three_card_1"
        android:text="@string/step_three_info_user_title"
        android:textSize="18dp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        />
    <android.support.v7.widget.CardView
        android:id="@+id/three_card_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_product_user_info"
        android:layout_marginBottom="8dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="14dp"
            >
            <EditText
                android:id="@+id/add_product_user_tel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/step_three_user_tel"
                android:lines="1"
                android:inputType="number|phone"
                android:layout_marginTop="8dp"
                />
            <EditText
                android:id="@+id/add_product_user_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/step_three_user_email"
                android:lines="1"
                android:inputType="textEmailAddress"
                android:layout_marginTop="8dp"
                />
        </LinearLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>