<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:padding="8dp"
    >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/add_product_img_txt"
            android:text="@string/step_one_picture_txt"
            android:textSize="18dp"
            android:textStyle="bold"
            />
        <android.support.v7.widget.CardView
            android:id="@+id/one_card_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/add_product_img_txt"
            android:layout_marginBottom="8dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="3dp"
                >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                >
               <android.support.v7.widget.RecyclerView
                   android:layout_weight="50"
                   android:id="@+id/add_product_img_list"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal"

                   >
               </android.support.v7.widget.RecyclerView>
            </LinearLayout>
                <View
                    android:id="@+id/view_add_picture"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/justLightGrey"
                    android:layout_margin="3dp"
                    />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    >
                    <ImageButton
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:scaleX="1"
                        android:scaleY="1"
                        android:id="@+id/btn_add_pics"
                        android:src="@drawable/ic_add_photo"
                        android:background="@drawable/round_corners"
                        android:tint="@color/textColorFilter"
                        android:layout_marginLeft="3dp"
                        android:layout_marginTop="4dp"
                        />
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="3dp"
                        android:text="@string/step_one_btn_deleteall"
                        android:id="@+id/btn_delete_all_img"
                        />
                </RelativeLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add_product_info"
        android:layout_below="@id/one_card_1"
        android:text="@string/step_one_info_txt"
        android:textSize="18dp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        />
        <android.support.v7.widget.CardView
            android:id="@+id/one_card_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/add_product_info"
            android:layout_marginBottom="8dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="14dp"
                >
                <EditText
                    android:id="@+id/add_product_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/step_one_info_title_hint"
                    />
                <EditText
                    android:id="@+id/add_product_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/step_one_info_description_hint"
                    android:lines="2"
                    android:layout_marginTop="8dp"
                    />

            </LinearLayout>
        </android.support.v7.widget.CardView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add_product_category"
        android:layout_below="@id/one_card_2"
        android:text="@string/step_one_category_txt"
        android:textSize="18dp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        />
    <android.support.v7.widget.CardView
        android:id="@+id/one_card_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_product_category"
        android:layout_marginBottom="8dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="14dp"
            >
           <Spinner
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               >
           </Spinner>
        </LinearLayout>
    </android.support.v7.widget.CardView>





</RelativeLayout>